# HaluMem

./: .env copy  .gitignore  README.md  pyproject.toml
eval/: .env-example  README.md  eval_memos.py  eval_supermemory.py  eval_zep.py  evaluation.py
prompts/: stage1_1_fixed_validation_prompt.txt  stage1_2_dynamic_validation_prompt.txt  stage1_3_preferences_validation_prompt.txt  stage2_3_profile2skeleton_prompt.txt  stage3_1_skeleton2core.txt  stage3_2_skeleton2routine.txt  stage4_1_events2memories.txt  stage4_1_interference_memory_generation.txt  stage5_1_dialogue_generation_with_interference.txt  stage5_1_interference_memory_generation.txt  stage5_1_memory_validation.txt  stage6_1_question_generation.txt  utils_dynamic_conversation_template.txt  utils_fixed_conversation_template.txt  utils_preferences_conversation_template.txt
scripts/: fix_token_cost.py  llm_request.py  parallel_utils.py  run_all_stages.py  stage1_1_fixed.py  stage1_2_dynamic.py  stage1_3_preferences.py  stage2_1_extend_dynamic.py  stage2_2_extend_preference.py  stage2_3_profile2skeleton.py  stage3_1_skeleton2core.py  stage3_2_skeleton2routine.py  stage3_3_init2events.py  stage3_4_merge_all.py  stage4_1_events2memories.py  stage5_1_dialogue_generation.py  stage5_2_token_calculation.py  stage6_1_question_generation.py  stage6_2_final_result_medium.py  stage6_3_final_result_long.py  utils.py
scripts/long_version/: eli5_parquet_to_jsonl.py  native_math_jsonl_to_messages_sample.py  unrelated_dialogue_generate.py
